# option-risk-engine

./: README.md  pyproject.toml
internal/: main.py
internal/app/pre-pricing/: bootstrap_spot_term_structure.py  bootstrap_zero_curve.py
internal/domain/assets/: equity.py  option.py
internal/domain/market/: option_chains.py  tenors.py  volatility_surface.py  yield_curve.py  yield_term_structure.py
internal/domain/modeling/: nelson_siegel.py
internal/domain/models/: SSVI.py  nelson_siegel.py  option_pricer.py
internal/infra/: api.py  fred.py
internal/infra/api/: api.py  fred.py  yahoo_finance.py
internal/modeling/: option_pricer.py  volatility_surface.py  yield_curve.py  yield_term_structure.py
internal/pipeline/prepricing/: bootstrap_spot_curve.py  extract_dividend_curve.py
internal/provider/: options_chains.py  par_curve.py
internal/risk_factor/: dividend_curve.py  spot_curve.py  volatility_surface.py
