[tool.poetry]
name = "option-risk-engine"
version = "0.1.0"
description = "Risk and pricing of an equity option book."
authors = ["paul-chapuy <chapuypaul@gmail.com>"]
readme = "README.md"
packages = [{include = "option_risk_engine"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
scipy = "^1.15.2"
requests = "^2.32.3"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
numba = "^0.61.2"
yfinance = "^0.2.57"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]